[gd_scene load_steps=19 format=3 uid="uid://bcp1j8ohl53o8"]

[ext_resource type="Script" path="res://Script/enemy_eyeboss.gd" id="1_44h2m"]
[ext_resource type="Texture2D" uid="uid://0gsv2qag8ku1" path="res://Assets/Eyeballboss_all.png" id="2_c3bg3"]
[ext_resource type="Texture2D" uid="uid://ditkmrdmoscht" path="res://Assets/rotatingarrow.png" id="4_fmnum"]
[ext_resource type="FontFile" uid="uid://bu5hdtbp88ojw" path="res://Fonts/EXEPixelPerfect.ttf" id="5_8hmig"]
[ext_resource type="Texture2D" uid="uid://cvcvbac04nos2" path="res://Assets/YCSTA_healthbar-1.png" id="6_4yjtd"]
[ext_resource type="Texture2D" uid="uid://c70378fp1g0kl" path="res://Assets/YCSTA_healthbar-2.png" id="7_m438r"]
[ext_resource type="Texture2D" uid="uid://dlws0qyse6xe4" path="res://Assets/arrowshadow.png" id="8_eq8tr"]
[ext_resource type="Texture2D" uid="uid://bpt5xouk1ltxv" path="res://Assets/Bigprojsprites-bigcircle.png" id="8_joycp"]

[sub_resource type="Animation" id="Animation_roeck"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_50v2h"]
resource_name = "bounce"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.17901),
"transitions": PackedFloat32Array(1.93187, 2.07053, 1.93187),
"update": 0,
"values": [Vector2(0, 1), Vector2(0, -1), Vector2(0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ym26"]
_data = {
"RESET": SubResource("Animation_roeck"),
"bounce": SubResource("Animation_50v2h")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1rmrd"]

[sub_resource type="Animation" id="Animation_2akjp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.392157, 0.392157, 1)]
}

[sub_resource type="Animation" id="Animation_vq5j7"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ei3xv"]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.392157, 0.392157, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tudjj"]
_data = {
"RESET": SubResource("Animation_2akjp"),
"default": SubResource("Animation_vq5j7"),
"hurt": SubResource("Animation_ei3xv")
}

[sub_resource type="Curve" id="Curve_vfb2r"]
_data = [Vector2(0.00561798, 0.032967), 0.0, 11.7363, 0, 0, Vector2(0.162921, 1), 0.0, 0.0, 0, 0, Vector2(0.58427, 0.923077), -0.740125, -0.740125, 0, 0, Vector2(1, 0), -3.28971, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_f4ocr"]
offsets = PackedFloat32Array(0, 0.12, 0.513333, 0.753333, 1)
colors = PackedColorArray(0.945098, 0.701961, 0, 0, 1, 0.894118, 0, 1, 1, 0.556863, 0.160784, 1, 1, 0.243137, 0.372549, 0.627451, 1, 0, 0, 0)

[node name="Enemy_Eyeboss" type="CharacterBody2D" groups=["enemy_m"]]
z_index = 1
script = ExtResource("1_44h2m")

[node name="Bigprojsprites-bigcircle" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.501961)
texture_filter = 1
position = Vector2(0, 18)
scale = Vector2(1, 0.640001)
texture = ExtResource("8_joycp")

[node name="Icon" type="Sprite2D" parent="."]
modulate = Color(1, 0.392157, 0.392157, 1)
texture_filter = 1
position = Vector2(0, 1)
texture = ExtResource("2_c3bg3")
hframes = 9
frame = 4

[node name="Anim" type="AnimationPlayer" parent="Icon"]
libraries = {
"": SubResource("AnimationLibrary_3ym26")
}

[node name="Rot" type="Node2D" parent="."]
visible = false

[node name="Rotatingarrow" type="Sprite2D" parent="Rot"]
texture_filter = 1
rotation = 1.5708
texture = ExtResource("4_fmnum")

[node name="Exclamation" type="Label" parent="."]
visible = false
modulate = Color(1, 0, 0, 1)
texture_filter = 1
offset_left = -14.0
offset_top = -23.0
offset_right = 14.0
offset_bottom = -10.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_8hmig")
text = "!"
horizontal_alignment = 1

[node name="TestLabel" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -270.0
offset_top = -36.0
offset_right = 270.0
offset_bottom = -23.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("5_8hmig")
text = "closest"
horizontal_alignment = 1

[node name="Healthbar" type="TextureProgressBar" parent="."]
offset_left = -5.0
offset_top = -13.0
offset_right = 5.0
offset_bottom = -12.0
max_value = 10.0
value = 10.0
texture_under = ExtResource("6_4yjtd")
texture_progress = ExtResource("7_m438r")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="HURTbox_Enemy" type="Area2D" parent="."]
visible = false

[node name="box" type="CollisionShape2D" parent="HURTbox_Enemy"]
shape = SubResource("CircleShape2D_1rmrd")

[node name="EffectsAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tudjj")
}

[node name="Arrowshadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.501961)
z_index = -1
texture_filter = 1
position = Vector2(0, 7)
texture = ExtResource("8_eq8tr")

[node name="Fire" type="CPUParticles2D" parent="."]
z_index = -1
texture_filter = 1
amount = 4
lifetime = 2.0
texture = ExtResource("8_joycp")
emission_shape = 1
emission_sphere_radius = 8.0
direction = Vector2(0, -1)
spread = 10.0
gravity = Vector2(0, 0)
initial_velocity_min = 12.0
initial_velocity_max = 20.0
scale_amount_min = 0.6
scale_amount_curve = SubResource("Curve_vfb2r")
color_ramp = SubResource("Gradient_f4ocr")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ChaseTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]
